--- a/[Dataset] 작업형 제2유형/2-1.ipynb
+++ b/[Dataset] 작업형 제2유형/2-1.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -275,7 +276,374 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['PearsonRConstantInputWarning',\n",
+       " 'PearsonRNearConstantInputWarning',\n",
+       " '__all__',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '_binned_statistic',\n",
+       " '_constants',\n",
+       " '_continuous_distns',\n",
+       " '_discrete_distns',\n",
+       " '_distn_infrastructure',\n",
+       " '_distr_params',\n",
+       " '_hypotests',\n",
+       " '_multivariate',\n",
+       " '_rvs_sampling',\n",
+       " '_stats',\n",
+       " '_stats_mstats_common',\n",
+       " '_tukeylambda_stats',\n",
+       " 'absolute_import',\n",
+       " 'alpha',\n",
+       " 'anderson',\n",
+       " 'anderson_ksamp',\n",
+       " 'anglit',\n",
+       " 'ansari',\n",
+       " 'arcsine',\n",
+       " 'argus',\n",
+       " 'bartlett',\n",
+       " 'bayes_mvs',\n",
+       " 'bernoulli',\n",
+       " 'beta',\n",
+       " 'betabinom',\n",
+       " 'betaprime',\n",
+       " 'binned_statistic',\n",
+       " 'binned_statistic_2d',\n",
+       " 'binned_statistic_dd',\n",
+       " 'binom',\n",
+       " 'binom_test',\n",
+       " 'boltzmann',\n",
+       " 'boxcox',\n",
+       " 'boxcox_llf',\n",
+       " 'boxcox_normmax',\n",
+       " 'boxcox_normplot',\n",
+       " 'bradford',\n",
+       " 'brunnermunzel',\n",
+       " 'burr',\n",
+       " 'burr12',\n",
+       " 'cauchy',\n",
+       " 'chi',\n",
+       " 'chi2',\n",
+       " 'chi2_contingency',\n",
+       " 'chisquare',\n",
+       " 'circmean',\n",
+       " 'circstd',\n",
+       " 'circvar',\n",
+       " 'combine_pvalues',\n",
+       " 'contingency',\n",
+       " 'cosine',\n",
+       " 'crystalball',\n",
+       " 'cumfreq',\n",
+       " 'describe',\n",
+       " 'dgamma',\n",
+       " 'dirichlet',\n",
+       " 'distributions',\n",
+       " 'division',\n",
+       " 'dlaplace',\n",
+       " 'dweibull',\n",
+       " 'energy_distance',\n",
+       " 'entropy',\n",
+       " 'epps_singleton_2samp',\n",
+       " 'erlang',\n",
+       " 'expon',\n",
+       " 'exponnorm',\n",
+       " 'exponpow',\n",
+       " 'exponweib',\n",
+       " 'f',\n",
+       " 'f_oneway',\n",
+       " 'fatiguelife',\n",
+       " 'find_repeats',\n",
+       " 'fisher_exact',\n",
+       " 'fisk',\n",
+       " 'fligner',\n",
+       " 'foldcauchy',\n",
+       " 'foldnorm',\n",
+       " 'frechet_l',\n",
+       " 'frechet_r',\n",
+       " 'friedmanchisquare',\n",
+       " 'gamma',\n",
+       " 'gausshyper',\n",
+       " 'gaussian_kde',\n",
+       " 'genexpon',\n",
+       " 'genextreme',\n",
+       " 'gengamma',\n",
+       " 'genhalflogistic',\n",
+       " 'geninvgauss',\n",
+       " 'genlogistic',\n",
+       " 'gennorm',\n",
+       " 'genpareto',\n",
+       " 'geom',\n",
+       " 'gilbrat',\n",
+       " 'gmean',\n",
+       " 'gompertz',\n",
+       " 'gstd',\n",
+       " 'gumbel_l',\n",
+       " 'gumbel_r',\n",
+       " 'halfcauchy',\n",
+       " 'halfgennorm',\n",
+       " 'halflogistic',\n",
+       " 'halfnorm',\n",
+       " 'hmean',\n",
+       " 'hypergeom',\n",
+       " 'hypsecant',\n",
+       " 'invgamma',\n",
+       " 'invgauss',\n",
+       " 'invweibull',\n",
+       " 'invwishart',\n",
+       " 'iqr',\n",
+       " 'itemfreq',\n",
+       " 'jarque_bera',\n",
+       " 'johnsonsb',\n",
+       " 'johnsonsu',\n",
+       " 'kappa3',\n",
+       " 'kappa4',\n",
+       " 'kde',\n",
+       " 'kendalltau',\n",
+       " 'kruskal',\n",
+       " 'ks_2samp',\n",
+       " 'ksone',\n",
+       " 'kstat',\n",
+       " 'kstatvar',\n",
+       " 'kstest',\n",
+       " 'kstwobign',\n",
+       " 'kurtosis',\n",
+       " 'kurtosistest',\n",
+       " 'laplace',\n",
+       " 'levene',\n",
+       " 'levy',\n",
+       " 'levy_l',\n",
+       " 'levy_stable',\n",
+       " 'linregress',\n",
+       " 'loggamma',\n",
+       " 'logistic',\n",
+       " 'loglaplace',\n",
+       " 'lognorm',\n",
+       " 'logser',\n",
+       " 'loguniform',\n",
+       " 'lomax',\n",
+       " 'mannwhitneyu',\n",
+       " 'matrix_normal',\n",
+       " 'maxwell',\n",
+       " 'median_absolute_deviation',\n",
+       " 'median_test',\n",
+       " 'mielke',\n",
+       " 'mode',\n",
+       " 'moment',\n",
+       " 'mood',\n",
+       " 'morestats',\n",
+       " 'moyal',\n",
+       " 'mstats',\n",
+       " 'mstats_basic',\n",
+       " 'mstats_extras',\n",
+       " 'multinomial',\n",
+       " 'multiscale_graphcorr',\n",
+       " 'multivariate_normal',\n",
+       " 'mvn',\n",
+       " 'mvsdist',\n",
+       " 'nakagami',\n",
+       " 'nbinom',\n",
+       " 'ncf',\n",
+       " 'nct',\n",
+       " 'ncx2',\n",
+       " 'norm',\n",
+       " 'normaltest',\n",
+       " 'norminvgauss',\n",
+       " 'obrientransform',\n",
+       " 'ortho_group',\n",
+       " 'pareto',\n",
+       " 'pearson3',\n",
+       " 'pearsonr',\n",
+       " 'percentileofscore',\n",
+       " 'planck',\n",
+       " 'pointbiserialr',\n",
+       " 'poisson',\n",
+       " 'power_divergence',\n",
+       " 'powerlaw',\n",
+       " 'powerlognorm',\n",
+       " 'powernorm',\n",
+       " 'ppcc_max',\n",
+       " 'ppcc_plot',\n",
+       " 'print_function',\n",
+       " 'probplot',\n",
+       " 'randint',\n",
+       " 'random_correlation',\n",
+       " 'rankdata',\n",
+       " 'ranksums',\n",
+       " 'rayleigh',\n",
+       " 'rdist',\n",
+       " 'recipinvgauss',\n",
+       " 'reciprocal',\n",
+       " 'relfreq',\n",
+       " 'rice',\n",
+       " 'rv_continuous',\n",
+       " 'rv_discrete',\n",
+       " 'rv_histogram',\n",
+       " 'rvs_ratio_uniforms',\n",
+       " 'scoreatpercentile',\n",
+       " 'sem',\n",
+       " 'semicircular',\n",
+       " 'shapiro',\n",
+       " 'siegelslopes',\n",
+       " 'sigmaclip',\n",
+       " 'skellam',\n",
+       " 'skew',\n",
+       " 'skewnorm',\n",
+       " 'skewtest',\n",
+       " 'spearmanr',\n",
+       " 'special_ortho_group',\n",
+       " 'statlib',\n",
+       " 'stats',\n",
+       " 't',\n",
+       " 'test',\n",
+       " 'theilslopes',\n",
+       " 'tiecorrect',\n",
+       " 'tmax',\n",
+       " 'tmean',\n",
+       " 'tmin',\n",
+       " 'trapz',\n",
+       " 'triang',\n",
+       " 'trim1',\n",
+       " 'trim_mean',\n",
+       " 'trimboth',\n",
+       " 'truncexpon',\n",
+       " 'truncnorm',\n",
+       " 'tsem',\n",
+       " 'tstd',\n",
+       " 'ttest_1samp',\n",
+       " 'ttest_ind',\n",
+       " 'ttest_ind_from_stats',\n",
+       " 'ttest_rel',\n",
+       " 'tukeylambda',\n",
+       " 'tvar',\n",
+       " 'uniform',\n",
+       " 'unitary_group',\n",
+       " 'variation',\n",
+       " 'vonmises',\n",
+       " 'vonmises_line',\n",
+       " 'wald',\n",
+       " 'wasserstein_distance',\n",
+       " 'weibull_max',\n",
+       " 'weibull_min',\n",
+       " 'weightedtau',\n",
+       " 'wilcoxon',\n",
+       " 'wishart',\n",
+       " 'wrapcauchy',\n",
+       " 'yeojohnson',\n",
+       " 'yeojohnson_llf',\n",
+       " 'yeojohnson_normmax',\n",
+       " 'yeojohnson_normplot',\n",
+       " 'yulesimon',\n",
+       " 'zipf',\n",
+       " 'zmap',\n",
+       " 'zscore']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats\n",
+    "#dir(scipy.stats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import skew, kurtosis\n",
+    "\n",
+    "df.dtypes\n",
+    "\"\"\"\n",
+    "총구매액         int64\n",
+    "최대구매액        int64\n",
+    "환불금액       float64\n",
+    "내점일수         int64\n",
+    "내점당구매건수    float64\n",
+    "주말방문비율     float64\n",
+    "구매주기         int64\n",
+    "gender       int64\n",
+    "\"\"\"\n",
+    "num_type = ['총구매액','최대구매액','환불금액','내점일수','내점당구매건수','주말방문비율','구매주기','gender']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "총구매액       4.168699\n",
+       "최대구매액      6.106685\n",
+       "환불금액       8.005701\n",
+       "내점일수       2.817549\n",
+       "내점당구매건수    2.953179\n",
+       "주말방문비율     0.940352\n",
+       "구매주기       2.095830\n",
+       "gender     0.511995\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[num_type].apply(lambda x : skew(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.log1o()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,235 +661,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cust_id</th>\n",
-       "      <th>총구매액</th>\n",
-       "      <th>최대구매액</th>\n",
-       "      <th>환불금액</th>\n",
-       "      <th>주구매상품</th>\n",
-       "      <th>주구매지점</th>\n",
-       "      <th>내점일수</th>\n",
-       "      <th>내점당구매건수</th>\n",
-       "      <th>주말방문비율</th>\n",
-       "      <th>구매주기</th>\n",
-       "      <th>gender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>cust_id</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>총구매액</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.70008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>최대구매액</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.70008</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>환불금액</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주구매상품</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주구매지점</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>내점일수</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>내점당구매건수</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주말방문비율</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>구매주기</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>gender</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         cust_id     총구매액    최대구매액  환불금액  주구매상품  주구매지점  내점일수  내점당구매건수  주말방문비율  \\\n",
-       "cust_id      NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "총구매액         NaN      NaN  0.70008   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "최대구매액        NaN  0.70008      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "환불금액         NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "주구매상품        NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "주구매지점        NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "내점일수         NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "내점당구매건수      NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "주말방문비율       NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "구매주기         NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "gender       NaN      NaN      NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "\n",
-       "         구매주기  gender  \n",
-       "cust_id   NaN     NaN  \n",
-       "총구매액      NaN     NaN  \n",
-       "최대구매액     NaN     NaN  \n",
-       "환불금액      NaN     NaN  \n",
-       "주구매상품     NaN     NaN  \n",
-       "주구매지점     NaN     NaN  \n",
-       "내점일수      NaN     NaN  \n",
-       "내점당구매건수   NaN     NaN  \n",
-       "주말방문비율    NaN     NaN  \n",
-       "구매주기      NaN     NaN  \n",
-       "gender    NaN     NaN  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# corr\n",
     "df.corr()[(abs(df.corr()) > 0.7) & (abs(df.corr()) != 1)]"
@@ -529,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,40 +695,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2450.0, 2800.0, 3500)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train.shape[0]*0.7, train.shape[0]*0.8, train.shape[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((2450, 71), (1050, 71), (2450,), (1050,))"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 데이터 분리\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -661,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
