--- a/[Dataset] 작업형 제2유형/2-1.ipynb
+++ b/[Dataset] 작업형 제2유형/2-1.ipynb
@@ -48,27 +48,8 @@
     "train = pd.read_csv('data/X_train.csv', encoding='euc-kr') \n",
     "target = pd.read_csv('data/y_train.csv')\n",
     "test = pd.read_csv('data/X_test.csv', encoding='euc-kr')\n",
-    "\n",
     "print(train.shape, target.shape, test.shape)\n",
-    "\n",
     "df = train.merge(target, on='cust_id', how='left')\n",
-    "print(df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(5982, 11)\n"
-     ]
-    }
-   ],
-   "source": [
     "df = pd.concat([df, test])\n",
     "print(df.shape)"
    ]
@@ -82,103 +63,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 5982 entries, 0 to 2481\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column   Non-Null Count  Dtype  \n",
-      "---  ------   --------------  -----  \n",
-      " 0   cust_id  5982 non-null   int64  \n",
-      " 1   총구매액     5982 non-null   int64  \n",
-      " 2   최대구매액    5982 non-null   int64  \n",
-      " 3   환불금액     2076 non-null   float64\n",
-      " 4   주구매상품    5982 non-null   object \n",
-      " 5   주구매지점    5982 non-null   object \n",
-      " 6   내점일수     5982 non-null   int64  \n",
-      " 7   내점당구매건수  5982 non-null   float64\n",
-      " 8   주말방문비율   5982 non-null   float64\n",
-      " 9   구매주기     5982 non-null   int64  \n",
-      " 10  gender   3500 non-null   float64\n",
-      "dtypes: float64(4), int64(5), object(2)\n",
-      "memory usage: 560.8+ KB\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(df.info())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "            cust_id          총구매액         최대구매액          환불금액 주구매상품 주구매지점  \\\n",
-      "count   5982.000000  5.982000e+03  5.982000e+03  2.076000e+03  5982  5982   \n",
-      "unique          NaN           NaN           NaN           NaN    42    24   \n",
-      "top             NaN           NaN           NaN           NaN    기타  본  점   \n",
-      "freq            NaN           NaN           NaN           NaN  1060  1803   \n",
-      "mean    2990.500000  9.569838e+07  2.053814e+07  2.469452e+07   NaN   NaN   \n",
-      "std     1726.998987  1.676480e+08  3.330805e+07  5.281222e+07   NaN   NaN   \n",
-      "min        0.000000 -5.242152e+07 -3.744000e+07  5.600000e+03   NaN   NaN   \n",
-      "25%     1495.250000  4.867800e+06  2.875000e+06  2.304000e+06   NaN   NaN   \n",
-      "50%     2990.500000  2.898500e+07  1.019760e+07  7.627000e+06   NaN   NaN   \n",
-      "75%     4485.750000  1.142893e+08  2.447250e+07  2.353250e+07   NaN   NaN   \n",
-      "max     5981.000000  2.861238e+09  7.066290e+08  8.715144e+08   NaN   NaN   \n",
-      "\n",
-      "               내점일수      내점당구매건수       주말방문비율         구매주기       gender  \n",
-      "count   5982.000000  5982.000000  5982.000000  5982.000000  3500.000000  \n",
-      "unique          NaN          NaN          NaN          NaN          NaN  \n",
-      "top             NaN          NaN          NaN          NaN          NaN  \n",
-      "freq            NaN          NaN          NaN          NaN          NaN  \n",
-      "mean      19.362922     2.828501     0.301672    20.679371     0.376000  \n",
-      "std       26.681326     1.848389     0.286858    24.485411     0.484449  \n",
-      "min        1.000000     1.000000     0.000000     0.000000     0.000000  \n",
-      "25%        2.000000     1.704248     0.025688     4.000000     0.000000  \n",
-      "50%        9.000000     2.375000     0.250000    13.000000     0.000000  \n",
-      "75%       26.000000     3.375000     0.440554    28.000000     1.000000  \n",
-      "max      285.000000    22.083333     1.000000   177.000000     1.000000  \n"
-     ]
-    }
-   ],
-   "source": [
+    "print(df.info())\n",
     "print(df.describe(include=\"all\") )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6529588766298897\n",
-      "5600.0\n",
-      "2482\n"
-     ]
-    }
-   ],
-   "source": [
-    "# null - 환불금액\n",
-    "print(sum(df['환불금액'].isna())/df.shape[0])\n",
-    "# 65%가 null min=\n",
-    "print(df['환불금액'].min())\n",
-    "# min 5600.0 이므로, 0으로 대체\n",
-    "df['환불금액'] = df['환불금액'].fillna(0)\n",
-    "print(df.isna().sum().sum())"
    ]
   },
   {
@@ -186,7 +76,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(sum(df['환불금액'].isna())/df.shape[0], df['환불금액'].min())\n",
+    "df['환불금액'] = df['환불금액'].fillna(0)\n",
+    "print(df.isna().sum().sum())"
+   ]
   },
   {
    "cell_type": "code",
@@ -198,8 +92,6 @@
     "#print(df['주구매상품'].value_counts())\n",
     "#print(df['주구매지점'].value_counts())\n",
     "\n",
-    "# label encoding\n",
-    "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "enc = LabelEncoder()\n",
     "df['주구매상품'] = enc.fit_transform(df['주구매상품'])\n",
@@ -208,237 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cust_id</th>\n",
-       "      <th>총구매액</th>\n",
-       "      <th>최대구매액</th>\n",
-       "      <th>환불금액</th>\n",
-       "      <th>주구매상품</th>\n",
-       "      <th>주구매지점</th>\n",
-       "      <th>내점일수</th>\n",
-       "      <th>내점당구매건수</th>\n",
-       "      <th>주말방문비율</th>\n",
-       "      <th>구매주기</th>\n",
-       "      <th>gender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>cust_id</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>총구매액</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>최대구매액</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>환불금액</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주구매상품</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주구매지점</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>내점일수</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>내점당구매건수</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>주말방문비율</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>구매주기</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>gender</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         cust_id  총구매액  최대구매액  환불금액  주구매상품  주구매지점  내점일수  내점당구매건수  주말방문비율  \\\n",
-       "cust_id      NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "총구매액         NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "최대구매액        NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "환불금액         NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "주구매상품        NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "주구매지점        NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "내점일수         NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "내점당구매건수      NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "주말방문비율       NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "구매주기         NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "gender       NaN   NaN    NaN   NaN    NaN    NaN   NaN      NaN     NaN   \n",
-       "\n",
-       "         구매주기  gender  \n",
-       "cust_id   NaN     NaN  \n",
-       "총구매액      NaN     NaN  \n",
-       "최대구매액     NaN     NaN  \n",
-       "환불금액      NaN     NaN  \n",
-       "주구매상품     NaN     NaN  \n",
-       "주구매지점     NaN     NaN  \n",
-       "내점일수      NaN     NaN  \n",
-       "내점당구매건수   NaN     NaN  \n",
-       "주말방문비율    NaN     NaN  \n",
-       "구매주기      NaN     NaN  \n",
-       "gender    NaN     NaN  "
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# corr\n",
     "df.corr()[(abs(df.corr()) > 0.7) & (abs(df.corr()) != 1)]"
    ]
   },
@@ -457,16 +122,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# one-hot \n",
     "df = pd.get_dummies(df, columns=['주구매상품','주구매지점'], drop_first=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -539,10 +196,7 @@
     "#dir(sklearn.ensemble)\n",
     "#help(sklearn.ensemble.RandomForestClassifier)\n",
     "rfc = RandomForestClassifier()\n",
-    "gbc = GradientBoostingClassifier()\n",
-    "\n",
-    "#rfc.fit(X_train, y_train)\n",
-    "#gbc.fit(X_train, y_train)"
+    "gbc = GradientBoostingClassifier()"
    ]
   },
   {
@@ -563,18 +217,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#help(GradientBoostingClassifier)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'criterion': 'gini', 'n_estimators': 200}\n"
+     ]
+    }
+   ],
    "source": [
     "parmas = {'n_estimators':[100,200], 'criterion':[\"gini\", \"entropy\"]}\n",
     "rfc_gs = GridSearchCV(rfc, param_grid=parmas, scoring='roc_auc', cv=3, refit=True, return_train_score=True)\n",
@@ -592,22 +245,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VotingClassifier(estimators=[('rfc', RandomForestClassifier(n_estimators=200)),\n",
+       "                             ('gbc', GradientBoostingClassifier())],\n",
+       "                 voting='soft')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vot = VotingClassifier(estimators=[\n",
     "    ('rfc',rfc), ('gbc',gbc)\n",
     "], voting='soft')\n",
-    "vot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "vot.fit(X_train, y_train)"
    ]
   },
@@ -620,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,9 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6102262288445669\n"
+     ]
+    }
+   ],
    "source": [
     "pred = vot.predict(X_test)\n",
     "print(roc_auc_score(pred, y_test))"
@@ -646,9 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2482, 2)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pred = vot.predict_proba(test.drop('cust_id', axis=1, inplace=False))\n",
     "pred.shape"
@@ -656,25 +332,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.66555393, 0.33444607],\n",
+       "       [0.82725971, 0.17274029],\n",
+       "       [0.79211151, 0.20788849],\n",
+       "       ...,\n",
+       "       [0.33111937, 0.66888063],\n",
+       "       [0.66668592, 0.33331408],\n",
+       "       [0.49444108, 0.50555892]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pred # 1일 확률 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.33444607, 0.17274029, 0.20788849, ..., 0.66888063, 0.33331408,\n",
+       "       0.50555892])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pred[:,1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,16 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test[['cust_id', 'gender']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
